# LMR_TASK

./: .gitignore  README.md  a.py  b.py  com.example.lmrtask.desktop  com.example.lmrtask1all.click  com.example.lmrtask_1.0_all.click  main.py  manifest.json  p.py  requirements.txt  setup.py  snapcraft.yaml  tasks.json
lmrtask/: main.py  pyproject.toml
snap/: snapcraft.yaml
snap/gui/: lmrtask.desktop
snap/local/: commande.md  file.txt
